# quoridor

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  tuning.yaml
src/quoridor/: cli.py
src/quoridor/bench/: benchmark.py  elo.py  tuner.py
src/quoridor/bots/: alphabeta_bot.py  base.py  greedy_bot.py  mcts_bot.py  minimax_bot.py  random_bot.py  registry.py
src/quoridor/core/: board.py  moves.py  pathfind.py  rules.py  state.py
src/quoridor/eval/: heuristics.py  wall_strategy.py
src/quoridor/persistence/: logger.py
src/quoridor/runner/: game_runner.py  match.py  tournament.py
src/quoridor/ui/: live.py  renderer.py  replay.py
tests/: test_makeunmake.py  test_matrix_analysis.py  test_pathfind.py  test_performance.py  test_rules.py  test_wall_strategy.py
